title text is changed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-130136264-2');
-    </script>
+    </script>    
 
     <title>APLY Inc. | 주식회사 어플라이</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords"
-        content="fintech, AQR, AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw, vision, anomaly, detection, machine, ai, bigdata">
+        content="fintech, 간편, 송금, AQR, AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw, vision, anomaly, detection, machine, ai, bigdata">
     <meta name="description" content="즐겁게 일하는 진보된 플랫폼">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="즐겁게 일하는 진보된 플랫폼">
@@ -58,7 +58,7 @@
     <!-- Plugins-->
     <link href="assets/css/plugins.min.css" rel="stylesheet">
     <!-- Template core CSS-->
-    <link href="assets/css/template.css?v=20230124" rel="stylesheet">
+    <link href="assets/css/template.css?v=20230313" rel="stylesheet">    
 </head>
 
 <body>
@@ -126,10 +126,11 @@
                 data-youtube="https://www.youtube.com/watch?v=jVnmsM_8BEg"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
-                        <h4 class="anitext"><b>
-                            ADVANCED PLATFORM TO FLY
-                        </b></h4>                        
+                    <div class="col-12 text-center"><center>
+                        <span class="btn-grad" style="width:400px;font-size:14px;">
+                            <b></b>Advanced Platform To Fly</b> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 어플라이<span class="blinking-cursor">_</span>
+                        </span>
+                        </center>
                     </div>
                 </div>
             </div>
