title text is changed 2

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Plugins-->
     <link href="assets/css/plugins.min.css" rel="stylesheet">
     <!-- Template core CSS-->
-    <link href="assets/css/template.css?v=20230313" rel="stylesheet">    
+    <link href="assets/css/template.css?v=20230413_01" rel="stylesheet">    
 </head>
 
 <body>
@@ -127,8 +127,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center"><center>
-                        <span class="btn-grad" style="width:400px;font-size:14px;">
-                            <b></b>Advanced Platform To Fly</b> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 어플라이<span class="blinking-cursor">_</span>
+                        <span class="btn-grad" style="width:300px;font-size:14px;">
+                            <b></b>Advanced Platform to Fly</b> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 어플라이<span class="blinking-cursor">_</span>
                         </span>
                         </center>
                     </div>
