title text background color is changed

--- a/index.html
+++ b/index.html
@@ -126,10 +126,9 @@
                 data-youtube="https://www.youtube.com/watch?v=jVnmsM_8BEg"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-12 text-center"><center>
-                        <span class="btn-grad" style="width:300px;font-size:14px;">
-                            <b></b>Advanced Platform to Fly</b> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 어플라이<span class="blinking-cursor">_</span>
-                        </span>
+                    <div class="col-12 text-center" style="background: rgba(0, 0, 0, 0.5);">
+                        <center> 
+                            <b>Advanced platform to fly</b> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 어플라이<span class="blinking-cursor">_</span>
                         </center>
                     </div>
                 </div>
