--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
                             <div class="icon-box-icon"><img src="assets/images/widgets/9.png" width="30px" border=0></div>
                             <div class="feature-content">
                                 <h6>AQR (Advanced QR)</h6>
-                                <p>앱설치와 수수료가 없는 송금 절차 간소화 서비스</p>
+                                <p>계좌 정보를 노출하지 않고 고유 QR 코드와 URL로 안전하게 입금 요청을 하거나 송금 할 수 있는 서비스</p>
                                 <p>
                                     <a href="https://aqr.aplx.link/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
-                                        target="new"><i class="ti-link"></i></a>                                    
+                                        target="new"><i class="ti-link"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -218,10 +218,10 @@
                             <div class="icon-box-icon"><img src="assets/images/widgets/7.png" border=0></div>
                             <div class="feature-content">
                                 <h6>어플엑스 (APLX)</h6>
-                                <p>증강현실 기반 홍보/전시/커뮤니케이션 플랫폼</p>
+                                <p>증강현실 기반 홍보/전시/커뮤니케이션 솔루션</p>
                                 <p>
                                     <a href="https://home.aplx.link/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
-                                        target="new"><i class="ti-link"></i></a>                                    
+                                        target="new"><i class="ti-link"></i></a>
                                 </p>
                             </div>
                         </div>
@@ -235,7 +235,7 @@
                                 <p>과학기술정보통신부 국가연구개발사업 정보 길잡이</p>
                                 <p>
                                     <a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
-                                        target="new"><i class="ti-link"></i></a>                                    
+                                        target="new"><i class="ti-link"></i></a>
                                 </p>
                             </div>
                         </div>
