--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@
                     <div class="col-lg-5 offset-lg-1">
                         <h2>History<span class="blinking-cursor">_</span></h2>
                         <p class="lead">더 재미있게, 즐겁게 일하기 위한 진보된 플랫폼이 걸어온 길</p>
-
                     </div>
                 </div>
                 <div class="row">
@@ -269,6 +268,19 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                            <div class="icon-box-title">
+                                <h6>2023-04</h6>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>AQR 서비스 등록 계좌 수 500개 돌파
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
