--- a/recruit/index.html
+++ b/recruit/index.html
@@ -26,12 +26,12 @@
     <meta property="og:description" content="즐겁게 일하기 위한 진보된 플랫폼을 만나보세요!" />
     <title>채용공고 - 주식회사 어플라이 | APLY - Advanced platform to fly</title>
     <meta name="keywords"
-        content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
+        content="QR, AQR, 간편, 송금, 이체, 입금, 요청, advanced, platform, mobile, software, service, emotion, emotional, AR, 감성, 서비스, 소프트웨어, sw">
     <meta name="description" content="즐겁게 일하기 위한 진보된 플랫폼">
     <meta itemprop="description"
-        content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
+        content="즐겁게 일하기 위한 진보된 플랫폼">
     <meta itemprop="keywords"
-        content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
+        content="QR, AQR, 간편, 송금, 이체, 입금, 요청, advanced, platform, mobile, software, service, emotion, emotional, AR, 감성, 서비스, 소프트웨어, sw">
 
     <meta property="og:description" content="즐겁게 일하기 위한 진보된 플랫폼">
     <meta name="twitter:description" content="즐겁게 일하기 위한 진보된 플랫폼">
@@ -39,9 +39,9 @@
     <meta property="og:title" content="어플라이 | APLY - Advanced platform to fly">
     <meta name="twitter:title" content="어플라이 | APLY - Advanced platform to fly">
 
-    <meta itemprop="image" content="https://home.aply.biz/assets/images/site_title.png">
-    <meta property="og:image" content="https://home.aply.biz/assets/images/site_title.png">
-    <meta name="twitter:image" content="https://home.aply.biz/assets/images/site_title.png">
+    <meta itemprop="image" content="/assets/images/site_title.png">
+    <meta property="og:image" content="/assets/images/site_title.png">
+    <meta name="twitter:image" content="/assets/images/site_title.png">
 
     <link rel="alternate" href="https://home.aply.biz/" hreflang="x-default">
     <link rel="canonical" href="https://home.aply.biz/">
@@ -184,22 +184,22 @@
                                         <div class="col-lg-12 p-b-10"><label class="lab_check" for="">관심 직군</label>
                                         </div>
                                         <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_1"
-                                                name="min_type_1" value="조종"><label class="lab_check"
+                                                name="min_type_1" value="SW개발"><label class="lab_check"
                                                 for="min_type_1"><span class="checkbox"></span> SW개발</label></div>
                                         <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_2"
-                                                name="min_type_2" value="코딩"><label class="lab_check"
+                                                name="min_type_2" value="데이터 분석"><label class="lab_check"
                                                 for="min_type_2"><span class="checkbox"></span> 데이터 분석</label></div>
                                         <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_3"
-                                                name="min_type_3" value="제작"><label class="lab_check"
+                                                name="min_type_3" value="HW개발"><label class="lab_check"
                                                 for="min_type_3"><span class="checkbox"></span> HW개발</label></div>
                                         <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_4"
-                                                name="min_type_4" value="체험"><label class="lab_check"
+                                                name="min_type_4" value="마케팅"><label class="lab_check"
                                                 for="min_type_4"><span class="checkbox"></span> 마케팅</label></div>
                                         <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_5"
-                                                name="min_type_5" value="체험"><label class="lab_check"
+                                                name="min_type_5" value="디자인"><label class="lab_check"
                                                 for="min_type_5"><span class="checkbox"></span> 디자인</label></div>
                                         <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_6"
-                                                name="min_type_6" value="체험"><label class="lab_check"
+                                                name="min_type_6" value="기획"><label class="lab_check"
                                                 for="min_type_6"><span class="checkbox"></span> 기획</label></div>
                                     </div>
                                 </div>
@@ -247,6 +247,25 @@
             </div>
         </section>
 
+	    <!-- Introduce -->
+        <section class="module">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-12">
+                        <H5>
+                        주식회사 어플라이는 2018년에 설립되어 <b>영상처리, 증강현실</b> 기술 기반의 드론 솔루션과 플랫폼을 개발, 서비스하였습니다.<BR>
+                        2020년 부터 핵심사업의 전환을 통해 현재는<BR><BR>
+                        <ul>
+                        <li>- 증강현실 기반의 전시/홍보/커뮤니케이션 솔루션 <a href="https://aplx.link" target="_blank" style="color:#6378f0"><b>APLX</b></a></li>
+                        <li>- QR코드를 통해 계좌 번호의 노출없이 간편하고 안전하게 입금 요청과 송금을 할 수 있는 서비스 <a href="https://aqr.aplx.link" target="_blank" style="color:#6378f0"><b>AQR</b></a></li>
+                        </ul>
+                        을 개발하였고 안정적으로 서비스하고 있습니다.
+                        </H5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        				
 
         <!-- Services-->
         <section class="module">
@@ -501,7 +520,7 @@
                                             <div colorscheme="dark" class="fb-like"
                                                 data-href="https://facebook.com/aplyplatform" data-layout="standard"
                                                 data-action="like" data-size="small" data-show-faces="true"
-                                                data-width="280"
+                                                data-width="300"
                                                 data-share="false"></div>
                                         </li>
                                     </ul>
@@ -521,16 +540,16 @@
                                     <h6>Portfolio</h6>
                                 </div>
                                 <ul>
+                                    <li><a href="https://aqr.aplx.link/aqr?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><img src="../assets/images/widgets/9.png" alt="AQR"
+                                            style="width:33px;"></a></li>
                                     <li><a href="https://home.aplx.link/?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                         target=_new><img src="../assets/images/widgets/7.png" alt="APLX"
                                             style="width:45px;"></a></li>
-                                    <li><a href="https://aqr.aplx.link/aqr?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new><img src="../assets/images/widgets/9.png" alt="AQR"
-                                            style="width:33px;"></a></li>                                    
                                 </ul>
                                 <ul>
                                     <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                        target=_new><B>R&D KIOSK</B></a></li>                                                                        
+                                        target=_new><B>R&D KIOSK</B></a></li>
                                 </ul>
                             </aside>
                         </div>
