--- a/recruit/index.html
+++ b/recruit/index.html
@@ -257,9 +257,9 @@
                         2020년 부터 핵심사업의 전환을 통해 현재는<BR><BR>
                         <ul>
                         <li>- 증강현실 기반의 전시/홍보/커뮤니케이션 솔루션 <a href="https://aplx.link" target="_blank" style="color:#6378f0"><b>APLX</b></a></li>
-                        <li>- QR코드를 통해 계좌 번호의 노출없이 간편하고 안전하게 입금 요청과 송금을 할 수 있는 서비스 <a href="https://aqr.aplx.link" target="_blank" style="color:#6378f0"><b>AQR</b></a></li>
+                        <li>- QR코드를 통해 계좌 번호의 노출없이 간편하고 안전하게 입금 요청 또는, 송금 할 수 있는 서비스 <a href="https://aqr.aplx.link" target="_blank" style="color:#6378f0"><b>AQR</b></a></li>
                         </ul>
-                        을 개발하였고 안정적으로 서비스하고 있습니다.
+                        을 개발하였고 안정적으로 서비스하고 있습니다.                        
                         </H5>
                     </div>
                 </div>
