--- a/recruit/index.html
+++ b/recruit/index.html
@@ -253,13 +253,16 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <H5>
-                        주식회사 어플라이는 2018년에 설립되어 <b>영상처리, 증강현실</b> 기술 기반의 드론 솔루션과 플랫폼을 개발, 서비스하였습니다.<BR>
+                        주식회사 어플라이(APLY Inc.)는 2018년에 설립되어 <b>영상처리, 증강현실</b> 기술 기반의<br>
+                        드론 솔루션과 플랫폼을 개발, 서비스하였습니다.<BR><BR>
                         2020년 부터 핵심사업의 전환을 통해 현재는<BR><BR>
                         <ul>
                         <li>- 증강현실 기반의 전시/홍보/커뮤니케이션 솔루션 <a href="https://aplx.link" target="_blank" style="color:#6378f0"><b>APLX</b></a></li>
                         <li>- QR코드를 통해 계좌 번호의 노출없이 간편하고 안전하게 입금 요청 또는, 송금 할 수 있는 서비스 <a href="https://aqr.aplx.link" target="_blank" style="color:#6378f0"><b>AQR</b></a></li>
                         </ul>
-                        을 개발하였고 안정적으로 서비스하고 있습니다.                        
+                        을 개발하였고 안정적으로 서비스하고 있습니다.<BR>
+                        <BR>
+                        비전, 클라우드, 빅데이터, AI 등을 다루는 기술 역량과 다양한 국책 사업, 통계 분석, 연구 활동 경험을 보유하고 있습니다.                        
                         </H5>
                     </div>
                 </div>
