--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
         <section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg"
             data-overlay="0.25">
             <div class="container" id="ytbg2" data-ytbg-fade-in="true"
-                data-youtube="https://www.youtube.com/watch?v=DZcCOVd8o6c"></div>
+                data-youtube="https://www.youtube.com/watch?v=lIaTfbLI5Gc"></div>
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-center">
