--- a/symbol/index.html
+++ b/symbol/index.html
@@ -460,6 +460,8 @@
                                             <img src=./images/aqr_squre.png>
                                             <img src=./images/aqr_squre2.png>
                                             <img src=./images/aqr-android-chrome-256x256.png>
+                                            <img src=./images/aqr-logo-aqr4.png>
+                                            <img src=./images/aqr_squre_2.png>
                                         </div>
                                         </p>
 
