aqr circle 이미지 로고 변경

--- a/symbol/index.html
+++ b/symbol/index.html
@@ -462,6 +462,7 @@
                                             <img src=./images/aqr-android-chrome-256x256.png>
                                             <img src=./images/aqr-logo-aqr4.png>
                                             <img src=./images/aqr_squre_2.png>
+                                            <img src=./images/aqr_squre3.png>
                                         </div>
                                         </p>
 
