--- a/symbol/index.html
+++ b/symbol/index.html
@@ -463,6 +463,8 @@
                                             <img src=./images/aqr-logo-aqr4.png>
                                             <img src=./images/aqr_squre_2.png>
                                             <img src=./images/aqr_squre3.png>
+                                            <img src=./images/aqr_squre4.png>
+                                            <img src=./images/aqr_squre5.png>
                                         </div>
                                         </p>
 
