aqr logo is added

--- a/symbol/index.html
+++ b/symbol/index.html
@@ -465,6 +465,7 @@
                                             <img src=./images/aqr_squre3.png>
                                             <img src=./images/aqr_squre4.png>
                                             <img src=./images/aqr_squre5.png>
+                                            <img src=./images/aqr_logo_1.png>
                                         </div>
                                         </p>
 
