--- a/symbol/index.html
+++ b/symbol/index.html
@@ -456,16 +456,12 @@
                                         
                                         <p>
                                         <div style="background:#eeeeee">
-                                            <img src=./images/aqr_og_image.png> 
-                                            <img src=./images/aqr_squre.png>
+                                            <img src=./images/aqr_logo_1.png> 
                                             <img src=./images/aqr_squre2.png>
-                                            <img src=./images/aqr-android-chrome-256x256.png>
+                                            <img src=./images/aqr_square2.png>
+                                            <img src=./images/logo-aqr1.png>
                                             <img src=./images/aqr-logo-aqr4.png>
-                                            <img src=./images/aqr_squre_2.png>
-                                            <img src=./images/aqr_squre3.png>
-                                            <img src=./images/aqr_squre4.png>
-                                            <img src=./images/aqr_squre5.png>
-                                            <img src=./images/aqr_logo_1.png>
+                                            <img src=./images/logo-aqr2.png>                                            
                                         </div>
                                         </p>
 
