이메일 서명의 aplx, aqr 링크 주소 변경

--- a/symbol/index.html
+++ b/symbol/index.html
@@ -615,7 +615,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="../assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>    
     <script src="./js/clipboard.min.js"></script>
-    <script src="./js/aply_sign.js"></script>
+    <script src="./js/aply_sign.js?v=20230823"></script>
     <script>
         anime.timeline({ loop: false })
             .add({
