인덱스 페이지에 history 추가, 이미지 수정

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords"
-        content="fintech, 간편, 송금, AQR, AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw, vision, anomaly, detection, machine, ai, bigdata">
+        content="fintech, 간편, 송금, QR, 큐알, 코드, AQR, AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw, vision, anomaly, detection, machine, ai, bigdata">
     <meta name="description" content="즐겁게 일하는 진보된 플랫폼">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="즐겁게 일하는 진보된 플랫폼">
@@ -42,7 +42,7 @@
     <meta itemprop="description"
         content="즐겁게 일하는 진보된 플랫폼을 만나보세요!">
     <meta itemprop="keywords"
-        content="fintech, AQR, AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, data, bigdata, AI, 드론, 감성, 서비스, 소프트웨어, sw">
+        content="fintech, 간편, 송금, QR, 큐알, 코드, AQR, AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw, vision, anomaly, detection, machine, ai, bigdata">
     <meta itemprop="url" content="https://home.aply.biz/">
 
     <!-- Favicons-->
@@ -125,8 +125,8 @@
             <div class="container" id="ytbg1" data-ytbg-fade-in="true"
                 data-youtube="https://www.youtube.com/watch?v=jVnmsM_8BEg"></div>
             <div class="container">
-                <div class="row">
-                    <div class="col-12 text-center" style="background: rgba(0, 0, 0, 0.5);">
+                <div class="row align-items-center justify-content-center align-middle d-flex align-items-center text-center">
+                    <div class="col-4 text-center" style="background: rgba(0, 0, 0, 0.5);">
                         <center> 
                             <b>Advanced platform to fly</b> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 어플라이<span class="blinking-cursor">_</span>
                         </center>
@@ -268,6 +268,19 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                            <div class="icon-box-title">
+                                <h6>2023-07</h6>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>AQR 서비스 등록 계좌 정보 1000개 돌파 (<a href="https://www.edaily.co.kr/news/read?newsId=02400966635705352&mediaCodeNo=257" target="_blank">기사보기</a>)
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
