--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
             <div class="container" id="ytbg1" data-ytbg-fade-in="true"
                 data-youtube="https://www.youtube.com/watch?v=jVnmsM_8BEg"></div>
             <div class="container">
-                <div class="row align-items-center justify-content-center align-middle d-flex align-items-center text-center">
-                    <div class="col-4 text-center" style="background: rgba(0, 0, 0, 0.5);">
+                <div class="row align-items-center justify-content-center align-middle text-center">
+                    <div class="text-center" style="background: rgba(0, 0, 0, 0.5); width:100px">
                         <center> 
-                            <b>Advanced platform to fly</b> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 어플라이<span class="blinking-cursor">_</span>
+                            <b>어 플 라 이 <span class="blinking-cursor">_</span></b>
                         </center>
                     </div>
                 </div>
