recruit 페이지 문구 정리

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -250,17 +250,17 @@
 	    <!-- Introduce -->
         <section class="module">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-12">
+                <div class="row align-items-center justify-content-center align-middle text-center">
+                    <div class="col-lg-8">
                         <H5>
                         주식회사 어플라이(APLY Inc.)는 2018년에 설립되어 <b>영상처리, 증강현실</b> 기술 기반의<br>
                         드론 솔루션과 플랫폼을 개발, 서비스하였습니다.<BR><BR>
                         2021년 부터 핵심사업의 전환을 통해 현재는<BR><BR>
                         <ul>
-                        <li>- 증강현실 기반의 전시/홍보/커뮤니케이션 솔루션 <a href="https://aplx.link" target="_blank" style="color:#6378f0"><b>APLX</b></a></li>
-                        <li>- 계좌 번호의 노출없이 간편하고 안전하게 QR코드로 입금 요청 또는, 송금 할 수 있는 서비스 <a href="https://aqr.aplx.link" target="_blank" style="color:#6378f0"><b>AQR</b></a></li>
+                        <li>- 증강현실 기반의 전시/홍보/커뮤니케이션 솔루션 <a href="https://aplx.link" target="_blank" style="color:#6378f0"><img src="../assets/images/widgets/11.png" width="45px" style="margin-bottom:3px"></a></li>
+                        <li>- 간편한 송금 지원 서비스 <a href="https://aqr.aplx.link" target="_blank" style="color:#6378f0"><img src="../assets/images/widgets/10.png" width="37px" style="margin-bottom:3px"></a></li>
                         </ul>
-                        을 개발하고 있으며 안정적으로 서비스하고 있습니다.
+                        을 개발하여 안정적으로 서비스하고 있습니다.
                         </H5>
                     </div>
                 </div>
