--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
             <div class="container" id="ytbg1" data-ytbg-fade-in="true"
                 data-youtube="https://www.youtube.com/watch?v=jVnmsM_8BEg"></div>
             <div class="container">
-                <div class="row align-items-center justify-content-center align-middle text-center">
-                    <div class="text-center" style="background: rgba(0, 0, 0, 0.5); width:100px">
+                <div class="row">
+                    <div class="col-sm-12 text-center" style="background: rgba(0, 0, 0, 0.5);">
                         <center> 
                             <b>어 플 라 이 <span class="blinking-cursor">_</span></b>
                         </center>
