--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             <div class="icon-box-icon"><img src="assets/images/widgets/9.png" width="30px" border=0></div>
                             <div class="feature-content">
                                 <h6>AQR (Advanced QR)</h6>
-                                <p>계좌 정보를 노출하지 않고 고유 QR 코드와 URL로 안전하게 입금 요청을 하거나 송금 할 수 있는 서비스</p>
+                                <p>QR 코드 기반의 간편한 송금 지원 서비스</p>
                                 <p>
                                     <a href="https://aqr.aplx.link/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
                                         target="new"><i class="ti-link"></i></a>
