--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/widgets/9.png" width="30px" border=0></div>
                             <div class="feature-content">
-                                <h6>AQR (Advanced QR)</h6>
+                                <h6>에이큐알 (AQR)</h6>
                                 <p>QR 코드 기반의 간편한 송금 지원 서비스</p>
                                 <p>
                                     <a href="https://aqr.aplx.link/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
@@ -218,7 +218,7 @@
                             <div class="icon-box-icon"><img src="assets/images/widgets/7.png" border=0></div>
                             <div class="feature-content">
                                 <h6>어플엑스 (APLX)</h6>
-                                <p>증강현실 기반 홍보/전시/커뮤니케이션 솔루션</p>
+                                <p>AR 기반 홍보/전시/커뮤니케이션 솔루션</p>
                                 <p>
                                     <a href="https://home.aplx.link/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
                                         target="new"><i class="ti-link"></i></a>
@@ -231,7 +231,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/widgets/8.png" border=0></div>
                             <div class="feature-content">
-                                <h6>R&D KIOSK</h6>
+                                <h6>알앤디 키오스크 (R&D KIOSK)</h6>
                                 <p>과학기술정보통신부 국가연구개발사업 정보 길잡이</p>
                                 <p>
                                     <a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
