recruit 페이지의 loaction 링크 수정

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -110,7 +110,7 @@
                         </li>
                         <li><a href="../index.html#section-team"><span class="menu-item-span">TEAM</span></a>
                         </li>
-                        <li><a href="../index.html#section-location"><span class="menu-item-span">LOCATION</span></a>
+                        <li><a href="#section-location"><span class="menu-item-span">LOCATION</span></a>
                         </li>
                         <li><a href="https://blog.naver.com/PostList.naver?blogId=jebo78&categoryNo=38&from=postList" target="_blank"><span
                                     class="menu-item-span">BLOG</span></a>
