타이틀 배경색 변경

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 data-youtube="https://www.youtube.com/watch?v=jVnmsM_8BEg"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 text-center" style="background: rgba(0, 0, 0, 0.5);">
+                    <div class="col-sm-12 text-center" style="background: rgba(70, 152, 155, 0.5); border-radius: 5em;">
                         <center> 
                             <b>어 플 라 이 <span class="blinking-cursor">_</span></b>
                         </center>
