gps 주소 변환, wifi qr 생성 서비스 링크 추가

--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,9 @@
                                             <option>-------------------------------------</option>
                                             <option value="aqr">AQR</option>
                                             <option value="aplx">APLX</option>
-                                            <option value="kiosk">R&D KIOSK</option>                                            
+                                            <option value="kiosk">R&D KIOSK</option>
+                                            <option value="gps">GPS <-> 주소 변환</option>
+                                            <option value="wifi">WiFi QR코드 만들기</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
