하단 링크 수정등

--- a/symbol/index.html
+++ b/symbol/index.html
@@ -535,7 +535,7 @@
                                         <li></li>
                                         <li>
                                             <div colorscheme="dark" class="fb-like"
-                                                data-href="https://facebook.com/aplyplatform" data-width="230"
+                                                data-href="https://facebook.com/aplyplatform" data-width="300"
                                                 data-layout="standard" data-action="like" data-size="small"
                                                 data-show-faces="true" data-share="false"></div></i>
                                     </ul>
@@ -555,28 +555,16 @@
                                     <h6>Portfolio</h6>
                                 </div>
                                 <ul>
-                                    <li><a href="https://drdr.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="../assets/images/widgets/2.png" alt="두런두런"
-                                                style="height:30px;width:100px"></a></li>
-                                    <li><a href="https://dromi.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="../assets/images/widgets/3.png" alt="드로미"
-                                                style="height:30px;width:60px"></a></li>
+                                    <li><a href="https://aqr.aplx.link/aqr?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><img src="../assets/images/widgets/9.png" alt="AQR"
+                                            style="width:33px;"></a></li>
+                                    <li><a href="https://home.aplx.link/?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><img src="../assets/images/widgets/7.png" alt="APLX"
+                                            style="width:45px;"></a></li>
                                 </ul>
                                 <ul>
-                                    <li><a href="https://dkdk.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="../assets/images/widgets/1.png" alt="두근두근"
-                                                style="height:25px;width:70px"></a></li>
-                                    <li><a href="https://duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="../assets/images/widgets/4.png" alt="DUNI"
-                                                style="height:20px;width:70px"></a></li>
-                                </ul>
-                                <ul>
-                                    <li><a href="https://pilot.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="../assets/images/widgets/4.png" alt="DUNI"
-                                                style="height:15px;width:60px"><br><b>파일럿 센터</b></a></li>
-                                    <li><a href="https://developer.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                            target=_new><img src="../assets/images/widgets/4.png" alt="DUNI"
-                                                style="height:15px;width:60px"><br><b>개발자</b></a></li>
+                                    <li><a href="https://aplylab.com/kiosk/index_2022.html?utm_source=aply_recruit_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                        target=_new><B>R&D KIOSK</B></a></li>
                                 </ul>
                             </aside>
                         </div>
