--- a/recruit/index.html
+++ b/recruit/index.html
@@ -252,16 +252,16 @@
             <div class="container">
                 <div class="row align-items-center justify-content-center align-middle text-center">
                     <div class="col-lg-8">
-                        <H5>
+                        <span style="font-size:15px;">
                         주식회사 어플라이(APLY Inc.)는 2018년에 설립되어 <b>영상처리, 증강현실</b> 기술 기반의<br>
                         드론 솔루션과 플랫폼을 개발, 서비스하였습니다.<BR><BR>
                         2021년 부터 핵심사업의 전환을 통해 현재는<BR><BR>
                         <ul>
-                        <li>- 증강현실 기반의 전시/홍보/커뮤니케이션 솔루션 <a href="https://aplx.link" target="_blank" style="color:#6378f0"><img src="../assets/images/widgets/11.png" width="45px" style="margin-bottom:3px"></a></li>
-                        <li>- 간편한 송금 지원 서비스 <a href="https://aqr.aplx.link" target="_blank" style="color:#6378f0"><img src="../assets/images/widgets/10.png" width="37px" style="margin-bottom:3px"></a></li>
+                        <li>- 증강현실 기반의 전시/홍보/커뮤니케이션 솔루션 <a href="https://aplx.link" target="_blank" style="color:#6378f0"><img src="../assets/images/widgets/11.png" width="42px" style="margin-bottom:3px"></a></li>
+                        <li>- 간편한 송금 지원 서비스 <a href="https://aqr.aplx.link" target="_blank" style="color:#6378f0"><img src="../assets/images/widgets/10.png" width="33px" style="margin-bottom:3px"></a></li>
                         </ul>
                         을 개발하여 안정적으로 서비스하고 있습니다.
-                        </H5>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -273,6 +273,11 @@
             <div class="container">
 
                 <div class="row align-items-center">
+                    <div class="col-lg-4">
+                        <p class="m-b-30"><a href="../assets/images/recruit/b_6.jpg" data-lightbox="APLY"><img
+                                    src="../assets/images/recruit/b_6.jpg" alt="" border=0></a></p>
+                    </div>
+
                     <div class="col-lg-4">
                         <p class="m-b-30"><a href="../assets/images/recruit/b_5.jpg" data-lightbox="APLY"><img
                                     src="../assets/images/recruit/b_5.jpg" alt="" border=0></a></p>
@@ -492,8 +497,12 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-12">
-                            <div class="space" data-MY="60px"></div>
+                        <div class="col-md-12 text-center">
+                            <span style="font-size:15px;color:#000">주식회사 어플라이는 팀원 모두가 재택근무를 하고 있습니다.</span>
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <div class="space" data-MY="60px">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -532,6 +541,8 @@
                                             <option value="aqr">AQR</option>
                                             <option value="aplx">APLX</option>
                                             <option value="kiosk">R&D KIOSK</option>
+                                            <option value="gps">GPS <-> 주소 변환</option>
+                                            <option value="wifi">WiFi QR 만들기</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
