mini project 영역 추가

--- a/index.html
+++ b/index.html
@@ -239,7 +239,46 @@
                                 </p>
                             </div>
                         </div>
-                    </div>                                        
+                    </div>
+
+                    <div class="col-lg-12">
+                        <br>
+                        <hr>
+                        <br>
+                    </div>
+                
+                    <div class="col-lg-12 m-auto text-center">
+                        <h3>APLY mini project<span class="blinking-cursor">_</span></h3>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/logo_white.png" border=0></div>
+                            <div class="feature-content">
+                                <h6>GPS <-> 주소 변환</h6>
+                                <p>GPS 좌표를 주소로, 주소를 GPS 좌표로 변환 제공합니다.</p>
+                                <p>
+                                    <a href="https://gps.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                        target="new"><i class="ti-link"></i></a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/logo_white.png" border=0></div>
+                            <div class="feature-content">
+                                <h6>WiFi QR코드 만들기</h6>
+                                <p>WiFi 접속을 위한 QR코드를 생성합니다.</p>
+                                <p>
+                                    <a href="https://wifi.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                        target="new"><i class="ti-link"></i></a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
