캐치미 링크 추가

--- a/index.html
+++ b/index.html
@@ -279,6 +279,20 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-6 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/logo_white.png" border=0></div>
+                            <div class="feature-content">
+                                <h6>캐치미</h6>
+                                <p>AI 기반의 '무궁화 꽃이 피었습니다' 게임.</p>
+                                <p>
+                                    <a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                        target="new"><i class="ti-link"></i></a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -1056,8 +1070,10 @@
                                             <option value="aqr">AQR</option>
                                             <option value="aplx">APLX</option>
                                             <option value="kiosk">R&D KIOSK</option>
+                                            <option>-------------------------------------</option>
                                             <option value="gps">GPS <-> 주소 변환</option>
                                             <option value="wifi">WiFi QR코드 만들기</option>
+                                            <option value="catchme">캐치미</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
