--- a/recruit/index.html
+++ b/recruit/index.html
@@ -541,8 +541,10 @@
                                             <option value="aqr">AQR</option>
                                             <option value="aplx">APLX</option>
                                             <option value="kiosk">R&D KIOSK</option>
+                                            <option>-------------------------------------</option>
                                             <option value="gps">GPS <-> 주소 변환</option>
                                             <option value="wifi">WiFi QR 만들기</option>
+                                            <option value="catchme">캐치미</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
