aqr 스토어 추가

--- a/index.html
+++ b/index.html
@@ -283,6 +283,20 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/logo_white.png" border=0></div>
                             <div class="feature-content">
+                                <h6>AQR 스토어</h6>
+                                <p>QR코드 플레이트 스토어.</p>
+                                <p>
+                                    <a href="https://smartstore.naver.com/aqr"
+                                        target="new"><i class="ti-link"></i></a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/logo_white.png" border=0></div>
+                            <div class="feature-content">
                                 <h6>캐치미</h6>
                                 <p>AI 기반의 '무궁화 꽃이 피었습니다' 게임.</p>
                                 <p>
@@ -1073,6 +1087,7 @@
                                             <option>-------------------------------------</option>
                                             <option value="gps">GPS <-> 주소 변환</option>
                                             <option value="wifi">WiFi QR코드 만들기</option>
+                                            <option value="store">QR플레이트 스토어</option>
                                             <option value="catchme">캐치미</option>
                                         </select>
                                     </p>
