--- a/recruit/index.html
+++ b/recruit/index.html
@@ -544,6 +544,7 @@
                                             <option>-------------------------------------</option>
                                             <option value="gps">GPS <-> 주소 변환</option>
                                             <option value="wifi">WiFi QR 만들기</option>
+                                            <option value="store">QR플레이트 스토어</option>
                                             <option value="catchme">캐치미</option>
                                         </select>
                                     </p>
