--- a/index.html
+++ b/index.html
@@ -195,8 +195,9 @@
             <div class="container" id="ytbg2" data-ytbg-fade-in="true" data-youtube="https://www.youtube.com/watch?v=B4zC6-kr8Zc"></div>
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-12 m-auto text-center">
-                        <h3>APLY 서비스<span class="blinking-cursor">_</span></h3>
+                    <div class="col-lg-12 m-auto text-left pt-5">
+                        <h5><b>APLY 서비스</b></h5>
+                        <hr>
                     </div>
 
                     <div class="col-lg-6 col-md-6">
@@ -242,13 +243,13 @@
                     </div>
 
                     <div class="col-lg-12">
-                        <br>
-                        <hr>
+                        <br>                        
                         <br>
                     </div>
                 
-                    <div class="col-lg-12 m-auto text-center">
-                        <h3>APLY mini project<span class="blinking-cursor">_</span></h3>
+                    <div class="col-lg-12 m-auto text-left">
+                        <h5><b>APLY 미니 프로젝트</b></h5>
+                        <hr>
                     </div>
 
                     <div class="col-lg-6 col-md-6">
