공통 aply service 링크 스크립트 구현, 적용

--- a/index.html
+++ b/index.html
@@ -1077,19 +1077,6 @@
                                         <select id="selSites" class="select"
                                             style="background-color: #333; color: #aaa; border-color: #888;"
                                             onChange="changedSelector">
-                                            <option selected>Family site</option>
-                                            <option>-------------</option>
-                                            <option value="recruit">RECRUIT</option>
-                                            <option value="blog">BLOG</option>
-                                            <option>-------------</option>
-                                            <option value="aqr">AQR</option>
-                                            <option value="aplx">APLX</option>
-                                            <option value="kiosk">R&D KIOSK</option>
-                                            <option>-------------</option>
-                                            <option value="gps">GPS <-> 주소 변환</option>
-                                            <option value="wifi">WiFi QR코드 만들기</option>
-                                            <option value="store">QR코드 플레이트 스토어</option>
-                                            <option value="catchme">캐치미</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
@@ -1192,6 +1179,7 @@
     <script src="assets/js/custom/anime.min.js"></script>
     <script src="assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>
     <script src="assets/js/custom/custom.js"></script>
+    <script src="../assets/js/aplyServices.js?v=20230917_01"></script>
     <script>
         function showEmailPolicyDialog() {        
             $('#modal-content').load("emailpolicy.html");
