--- a/recruit/index.html
+++ b/recruit/index.html
@@ -534,18 +534,6 @@
                                         <select id="selSites" class="select"
                                             style="background-color: #333; color: #aaa; border-color: #888;"
                                             onChange="changedSelector">
-                                            <option selected>Family site</option>
-                                            <option>-------------</option>
-                                            <option value="blog">BLOG</option>
-                                            <option>-------------</option>
-                                            <option value="aqr">AQR</option>
-                                            <option value="aplx">APLX</option>
-                                            <option value="kiosk">R&D KIOSK</option>
-                                            <option>-------------</option>
-                                            <option value="gps">GPS <-> 주소 변환</option>
-                                            <option value="wifi">WiFi QR 만들기</option>
-                                            <option value="store">QR코드 플레이트 스토어</option>
-                                            <option value="catchme">캐치미</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
@@ -820,6 +808,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/js/lightbox.min.js"></script>
     <script src="./js/handler.js?v=20230121"></script>
+    <script src="../assets/js/aplyServices.js?v=20230917_01"></script>
     <script>
         $(document).ready(function (e) {
 
