--- a/symbol/index.html
+++ b/symbol/index.html
@@ -604,6 +604,7 @@
     <script src="../assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>    
     <script src="./js/clipboard.min.js"></script>
     <script src="./js/aply_sign.js?v=20230823"></script>
+    <script src="../assets/js/aplyServices.js?v=20230917_01"></script>
     <script>
         anime.timeline({ loop: false })
             .add({
