aply service 링크 스크립트 링크 오류 수정

--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
     <script src="assets/js/custom/anime.min.js"></script>
     <script src="assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>
     <script src="assets/js/custom/custom.js"></script>
-    <script src="../assets/js/aplyServices.js?v=20230917_01"></script>
+    <script src="assets/js/aplyServices.js?v=20230917_01"></script>
     <script>
         function showEmailPolicyDialog() {        
             $('#modal-content').load("emailpolicy.html");
