--- a/symbol/index.html
+++ b/symbol/index.html
@@ -522,7 +522,10 @@
                                         10915 / APLY Inc. / 6F, 24-21, Geumbit-ro, Paju-si, Gyeonggi-do, Republic of Korea
                                         <hr>
                                         <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
-                                        +82-2-6956-0801
+                                        <select id="selSites" class="select"
+                                            style="background-color: #333; color: #aaa; border-color: #888;"
+                                            onChange="changedSelector">
+                                        </select>
                                     </p>
                                     <ul class="social-icons">
                                         <li><a href="https://www.instagram.com/aplyplatform"><i
