aply 서비스 링크 목록 - 공통 스크립트 사용하게끔 개선

--- a/index.html
+++ b/index.html
@@ -1074,9 +1074,7 @@
                                         / 10915
                                         <hr>
                                         <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>                                        
-                                        <select id="selSites" class="select"
-                                            style="background-color: #333; color: #aaa; border-color: #888;"
-                                            onChange="changedSelector">
+                                        <select id="selSites" class="select" style="background-color: #333; color: #aaa; border-color: #888;">
                                         </select>
                                     </p>
                                     <ul class="social-icons">
