404 오류 페이지 수정

--- a/404.html
+++ b/404.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>  
@@ -52,10 +51,9 @@ body {
   font-family: 'Titillium Web', sans-serif;
   font-size: 186px;
   font-weight: 900;
-  margin: 0px;
-  text-transform: uppercase;
+  margin: 0px;  
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #5c91fe;
   background-size: cover;
   background-position: center;
 }
@@ -63,6 +61,7 @@ body {
 .notfound h2 {
   font-family: 'Titillium Web', sans-serif;
   font-size: 26px;
+  color: #5c91fe;
   font-weight: 700;
   margin: 0;
 }
@@ -72,13 +71,11 @@ body {
   font-size: 14px;
   font-weight: 500;
   margin-bottom: 0px;
-  text-transform: uppercase;
 }
 
 .notfound a {
   font-family: 'Titillium Web', sans-serif;
-  display: inline-block;
-  text-transform: uppercase;
+  display: inline-block;  
   color: #fff;
   text-decoration: none;
   border: none;
@@ -111,25 +108,17 @@ body {
 </head>
 <body>
 <div id="notfound">
-<div class="notfound">
-<div class="notfound-404">
-<h1>404</h1>
-</div>
-<h2>Oops! This Page Could Not Be Found</h2>
-<p>Sorry but the page you are looking for does not exist, have been removed. name changed or is temporarily unavailable</p>
-<a href="https://aply.biz">Go To Homepage</a>
-<br><br>
-<div class="copyright">
-  <p><img src="https://aply.biz/assets/images/logo.png" width="38px"> ©
-      <script>
-          var cYear = (new Date()).getFullYear();
-          document.write(cYear);
-      </script>
-      APLY Inc.
-  </p>
-</div>
 
-</div>
+    <div class="notfound">
+      <div class="notfound-404"><h1>404</h1></div>
+      <h2>Oops! This Page Could Not Be Found</h2>
+      <p>Sorry but the page you are looking for does not exist, have been removed. name changed or is temporarily unavailable</p>
+      <a href="https://aply.biz">GO TO HOMEPAGE</a> <a href="javascript:history.back();">BACK</a>
+      <br><br>
+      <div class="copyright">
+        <p><img src="https://home.aply.biz/assets/images/logo.png" width="35px"> © 2018 APLY Inc. All rights reserved.</p>
+      </div>
+  </div>
 </div>
 </body>
 </html>
