--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/logo_white.png" border=0></div>
                             <div class="feature-content">
-                                <h6>WiFi QR코드 만들기</h6>
-                                <p>WiFi 접속을 위한 QR코드를 생성합니다.</p>
+                                <h6>QR코드 만들기</h6>
+                                <p>간편하게 사용할 수 있는 QR코드를 생성합니다.</p>
                                 <p>
-                                    <a href="https://wifi.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                    <a href="https://qr.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
                                         target="new"><i class="ti-link"></i></a>
                                 </p>
                             </div>
