si 역량을 si 로 수정

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </li>
                         <li><a href="#section-about"><span class="menu-item-span">SERVICE</span></a>
                         </li>
-                        <li><a href="#section-si"><span class="menu-item-span">SI 역량</span></a>
+                        <li><a href="#section-si"><span class="menu-item-span">SI</span></a>
                         </li>
                         <li><a href="#section-history"><span class="menu-item-span">HISTORY</span></a>
                         </li>
@@ -330,7 +330,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-left pt-5">
-                        <h5><b>SI 역량</b></h5>
+                        <h5><b>System Integration</b></h5>
                         <hr>
                     </div>
 
