--- a/index.html
+++ b/index.html
@@ -197,9 +197,8 @@
         </div>
 
         <!-- Features-->
-        <section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg"
-            data-overlay="0.45" id="section-about">
-            <div class="container" id="ytbg2" data-ytbg-fade-in="true" data-youtube="https://www.youtube.com/watch?v=B4zC6-kr8Zc"></div>
+        <section class="module-cover parallax fullscreen text-center" data-background="assets/images/main/ar.png"
+            data-overlay="0.45" id="section-about">            
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-left pt-5">
@@ -324,9 +323,8 @@
         </div>
         
         <!-- Features-->
-        <section class="module-cover parallax fullscreen text-center" data-background="assets/images/community.jpg"
-            data-overlay="0.45" id="section-si">
-            <div class="container" id="ytbg2" data-ytbg-fade-in="true" data-youtube="https://www.youtube.com/watch?v=lIaTfbLI5Gc"></div>
+        <section class="module-cover parallax fullscreen text-center" data-background="assets/images/main/droneback.png"
+            data-overlay="0.45" id="section-si">            
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-left pt-5">
@@ -346,7 +344,7 @@
                                     <li><i class="ti-control-record"></i> 증강현실(AR) 기반 드론 제어, 모니터링 SW</li>
                                     <li><i class="ti-control-record"></i> AI 기반 드론 영상 분석 (이상탐지 등)</li>
                                     <li><i class="ti-control-record"></i> 드론 모니터링 및 영상 수집, 판매 솔루션 - 'DUNI' 개발 및 보유중</li>
-                                    <li><i class="ti-control-record"></i> D社, T社(방위사업), P社(대기업), D社, A社(기타) 대상 SW 개발 및 컨설팅</li>
+                                    <li><i class="ti-control-record"></i> D社, T社(방위산업), P社(대기업), D社, A社(기타) 대상 SW 개발</li>
                                 </ul>
                             </div>
                         </div>
