--- a/index.html
+++ b/index.html
@@ -327,15 +327,11 @@
             data-overlay="0.45" id="section-si">            
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-12 m-auto text-left pt-5">
-                        <h5><b>System Integration</b></h5>
-                        <hr>
-                    </div>
-
                     <div class="col-lg-6 col-md-6">
                         <div class="icon-box icon-box-left">
                             <div class="feature-content">
                                 <h6><B>드론 제어/모니터링 시스템 컨설팅 및 SW 개발</B></h6>
+                                <p><iframe width="200" height="80" src="https://www.youtube.com/embed/lIaTfbLI5Gc?si=R2HUw5m-Uv3C2pyc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
                                 <ul>
                                     <li><i class="ti-control-record"></i> GCS 설계</li>
                                     <li><i class="ti-control-record"></i> DJI社 솔루션 기반 SW (MSDK, PSDK, Cloud API)</li>
@@ -354,6 +350,7 @@
                         <div class="icon-box icon-box-left">
                             <div class="feature-content">
                                 <h6><B>증강현실(AR) SW 개발</B></h6>
+                                <p><iframe width="200" height="80" src="https://www.youtube.com/embed/B4zC6-kr8Zc?si=JolwiSbmViJ9kW4e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
                                 <ul>
                                     <li><i class="ti-control-record"></i> Android, iOS 기반 AR 앱</li>
                                     <li><i class="ti-control-record"></i> three.js, aframe 활용 Web AR</li>
